test: test 로직 변경 (#277)